--- a/.docker/compose/setup.yml
+++ b/.docker/compose/setup.yml
@@ -2,25 +2,25 @@ services:
   setup:
     image: alpine:latest
     container_name: ${COMPOSE_PROJECT_NAME:-salespider}-setup
-    
+
     environment:
       # Database Configuration
-      - POSTGRES_HOST=${POSTGRES_HOST:-postgres}
+      - POSTGRES_HOST=postgres
       - POSTGRES_PORT=${POSTGRES_PORT:-5432}
       - POSTGRES_DB=${POSTGRES_DB:-salespider}
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      
+
       # Application Configuration
       - SUPER_ADMIN_EMAIL=${SUPER_ADMIN_EMAIL:-admin@salespider.local}
       - SUPER_ADMIN_PASSWORD=${SUPER_ADMIN_PASSWORD}
       - APP_URL=${APP_URL:-https://${DOMAIN:-salespider.local}}
-      
+
       # SSL Configuration
       - DOMAIN=${DOMAIN:-salespider.local}
       - HOST_IP=${HOST_IP:-127.0.0.1}
       - CERT_DAYS=${CERT_DAYS:-3650}
-      
+
       # pgBackRest Configuration
       - PGBACKREST_REPO1_TYPE=${PGBACKREST_REPO1_TYPE:-none}
       - PGBACKREST_REPO1_PATH=${PGBACKREST_REPO1_PATH:-/var/lib/pgbackrest}
@@ -34,12 +34,12 @@ services:
       - PGBACKREST_REPO1_AZURE_CONTAINER=${AZURE_STORAGE_CONTAINER:-}
       - PGBACKREST_REPO1_GCS_BUCKET=${GCS_BUCKET:-}
       - PGBACKREST_REPO1_GCS_KEY=${GCS_KEY:-}
-      
+
       # Setup Options
       - SKIP_SEED=${SKIP_SEED:-false}
       - FORCE_RESET=${FORCE_RESET:-false}
       - SETUP_BACKUP=${SETUP_BACKUP:-true}
-    
+
     volumes:
       - ../scripts/setup:/scripts:ro
       - ../config/pgbackrest/pgbackrest.conf:/base-config/pgbackrest.conf:ro
@@ -47,7 +47,7 @@ services:
       - backup-data:/backup-data
       - pgbackrest-config:/pgbackrest-config
       - app-logs:/logs
-    
+
     command: |
       sh -c '
         set -e  # exit on any error
@@ -58,7 +58,7 @@ services:
 
         # Wait for PostgreSQL to be ready
         echo "Waiting for PostgreSQL to be ready..."
-        until pg_isready -h $POSTGRES_HOST -p $POSTGRES_PORT -U $POSTGRES_USER; do
+        until pg_isready -h $$POSTGRES_HOST -p $$POSTGRES_PORT -U $$POSTGRES_USER; do
           echo "PostgreSQL is unavailable - sleeping"
           sleep 2
         done
@@ -90,10 +90,10 @@ services:
         fi
 
         # Run custom setup scripts
-        for script in /scripts/custom/*.sh; do
-          if [ -f "$script" ]; then
-            echo "Running custom setup script: $script"
-            "$script"
+        for custom_script in /scripts/custom/*.sh; do
+          if [ -f "$$custom_script" ]; then
+            echo "Running custom setup script: $$custom_script"
+            "$$custom_script"
           fi
         done
 
@@ -103,13 +103,13 @@ services:
         touch /logs/setup-completed
 
         # Keep container running if requested
-        if [ "$KEEP_RUNNING" = "true" ]; then
+        if [ "$$KEEP_RUNNING" = "true" ]; then
           tail -f /dev/null
         fi
       '
 
-    restart: "no"
-    
+    restart: 'no'
+
     deploy:
       resources:
         limits:
@@ -118,13 +118,13 @@ services:
         reservations:
           memory: 128M
           cpus: '0.25'
-    
+
     logging:
       driver: json-file
       options:
-        max-size: "5m"
-        max-file: "2"
-    
+        max-size: '5m'
+        max-file: '2'
+
     networks:
       - salespider-net
 
