--- a/env.example
+++ b/env.example
@@ -4,12 +4,13 @@
 # =============================================================================
 # DEPLOYMENT CONFIGURATION
 # =============================================================================
+# REQUIRED for all deployments
 
 # Project and Compose Settings
 COMPOSE_PROJECT_NAME=salespider
 COMPOSE_FILE=.docker/docker-compose.yml
 
-# Domain and Network Configuration
+# Domain and Network Configuration (REQUIRED)
 DOMAIN=salespider.local
 HOST_IP=auto
 HTTP_PORT=80
@@ -22,27 +23,28 @@ BACKUP_PATH=./data/backups
 # =============================================================================
 # APPLICATION CONFIGURATION
 # =============================================================================
+# REQUIRED for all deployments
 
 # Application Settings
 NODE_ENV=production
 APP_PORT=3000
 LOG_LEVEL=info
 
-# Security Configuration
+# Security Configuration (REQUIRED - change these values!)
 JWT_SECRET=your-super-secret-jwt-key-min-32-characters-long
 TOKEN_EXPIRY=12h
 COOKIE_SECURE=true
 NEXTAUTH_SECRET=your-nextauth-secret-key-min-32-characters-long
 NEXTAUTH_URL=https://salespider.local
 
-# Super Admin Account
+# Super Admin Account (REQUIRED - change these values!)
 SUPER_ADMIN_EMAIL=admin@salespider.local
 SUPER_ADMIN_PASSWORD=ChangeThisPassword123!
 
-# AI Configuration
+# AI Configuration (OPTIONAL)
 GEMINI_API_KEY=your-gemini-api-key-here
 
-# Default App Settings (can be overridden in UI)
+# Default App Settings (OPTIONAL - can be overridden in UI)
 APP_NAME=SaleSpider
 APP_LOGO=
 PRIMARY_COLOR=#3b82f6
@@ -78,13 +80,13 @@ NEXT_PUBLIC_MAINTENANCE_MODE=false
 NEXT_PUBLIC_SHOW_DELETED_PRODUCTS=false
 NEXT_PUBLIC_ENABLED_PAYMENT_METHODS=CASH,CARD,MOBILE_MONEY,BANK_TRANSFER
 
-# Feature Flags
+# Feature Flags (OPTIONAL)
 ENABLE_ANALYTICS=false
 ENABLE_REPORTS=true
 ENABLE_BARCODE_SCANNER=true
 OFFLINE_MODE=true
 
-# Performance Settings
+# Performance Settings (OPTIONAL)
 APP_MEMORY_LIMIT=2G
 APP_CPU_LIMIT=2.0
 APP_MEMORY_RESERVATION=1G
@@ -97,16 +99,19 @@ CACHE_TTL=3600
 # DATABASE CONFIGURATION
 # =============================================================================
 
-# PostgreSQL Settings
+# PostgreSQL Settings (REQUIRED for self-hosted database)
+# For hosted database (Neon, Supabase, etc.), only DATABASE_URL is required
 POSTGRES_DB=salespider
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=SecurePostgresPassword123!
 POSTGRES_PORT=5432
 
-# Database URLs (use service names for Docker networking)
+# Database Connection (REQUIRED for all deployments)
+# Self-hosted: Use the default value below (connects to Docker container)
+# Hosted: Replace with your provider's connection string
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
 
-# PostgreSQL Performance Tuning
+# PostgreSQL Performance Tuning (OPTIONAL - self-hosted only)
 POSTGRES_MEMORY_LIMIT=1G
 POSTGRES_CPU_LIMIT=1.0
 POSTGRES_MEMORY_RESERVATION=512M
@@ -119,13 +124,14 @@ POSTGRES_MAX_CONNECTIONS=100
 POSTGRES_MAX_WAL_SENDERS=3
 POSTGRES_WAL_KEEP_SIZE=1GB
 
-# PostgreSQL Logging
+# PostgreSQL Logging (OPTIONAL - self-hosted only)
 POSTGRES_LOG_STATEMENT=none
 POSTGRES_LOG_MIN_DURATION_STATEMENT=1000
 
 # =============================================================================
 # SSL/HTTPS CONFIGURATION
 # =============================================================================
+# OPTIONAL - defaults are secure
 
 # SSL Settings (using internal certificates)
 SSL_ENABLED=true
@@ -144,19 +150,25 @@ RATE_LIMIT_WINDOW="1m"
 # =============================================================================
 # BACKUP CONFIGURATION (pgBackRest)
 # =============================================================================
+# REQUIRED for self-hosted database | NOT APPLICABLE for hosted database
 
-# pgBackRest Repository Type (posix, s3, azure, gcs)
+# Backup Repository Type - Choose one:
+#   none   - No backup system (default, fastest setup)
+#   posix  - Local filesystem backups (advisable to use another partition or external drive)
+#   s3     - AWS S3 cloud backups (requires AWS credentials below)
+#   azure  - Azure Blob Storage backups (requires Azure credentials below)
+#   gcs    - Google Cloud Storage backups (requires GCS credentials below)
 PGBACKREST_REPO1_TYPE=none
 PGBACKREST_REPO1_PATH=/var/lib/pgbackrest
 
-# Backup Schedule (cron format)
+# Backup Schedule (OPTIONAL - cron format)
 BACKUP_SCHEDULE_FULL="0 2 * * 0"
 
-# Backup Retention
+# Backup Retention (OPTIONAL)
 BACKUP_RETENTION_FULL=7
 BACKUP_RETENTION_DIFF=3
 
-# Backup Resource Limits
+# Backup Resource Limits (OPTIONAL)
 BACKUP_MEMORY_LIMIT=512M
 BACKUP_CPU_LIMIT=0.5
 BACKUP_MEMORY_RESERVATION=256M
@@ -165,55 +177,40 @@ BACKUP_CPU_RESERVATION=0.25
 # =============================================================================
 # CLOUD STORAGE CONFIGURATION (Optional - for remote backups)
 # =============================================================================
+# OPTIONAL - Only required if PGBACKREST_REPO1_TYPE is set to s3, azure, or gcs
 
-# AWS S3 (set PGBACKREST_REPO1_TYPE=s3 to enable)
+# AWS S3 Configuration (required when PGBACKREST_REPO1_TYPE=s3)
 AWS_ACCESS_KEY_ID=your-aws-access-key-id
 AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=eu-north-1
 AWS_S3_BUCKET=your-s3-bucket-name
 AWS_S3_ENDPOINT=s3.eu-north-1.amazonaws.com
 
-# Azure Blob Storage (set PGBACKREST_REPO1_TYPE=azure to enable)
+# Azure Blob Storage Configuration (required when PGBACKREST_REPO1_TYPE=azure)
 # AZURE_STORAGE_ACCOUNT=
 # AZURE_STORAGE_KEY=
 # AZURE_STORAGE_CONTAINER=
 
-# Google Cloud Storage (set PGBACKREST_REPO1_TYPE=gcs to enable)
+# Google Cloud Storage Configuration (required when PGBACKREST_REPO1_TYPE=gcs)
 # GCS_BUCKET=
 # GCS_KEY=
 
-# Logging
+# Logging (OPTIONAL)
 ACCESS_LOG_ENABLED=true
 ERROR_LOG_ENABLED=true
 
 # =============================================================================
 # DEVELOPMENT/DEBUGGING
 # =============================================================================
+# OPTIONAL - for development and testing
 
 # Setup Options
 SKIP_SEED=false
 FORCE_RESET=false
+# Set SETUP_BACKUP to false when using hosted database (Neon, Supabase, etc.)
 SETUP_BACKUP=true
 KEEP_RUNNING=false
 
 # Development Settings (set to false in production)
 DEBUG=false
 VERBOSE_LOGGING=false
-
-# =============================================================================
-# PLATFORM-SPECIFIC OVERRIDES
-# =============================================================================
-
-# These will be automatically detected and set by the deployment script
-# Override only if you need specific values
-
-# PLATFORM=linux|macos|windows
-# ARCHITECTURE=amd64|arm64
-# DOCKER_COMPOSE_CMD=docker-compose|docker compose
-
-
-# Check interval for monitoring
-CHECK_INTERVAL=60
-
-# Script variables for setup
-script=
