--- a/env.example
+++ b/env.example
@@ -16,6 +16,13 @@ HOST_IP=auto
 HTTP_PORT=80
 HTTPS_PORT=443
 
+# CORS Configuration (space-separated list of allowed origins)
+# List all origins (domains/IPs) that will access the application
+# For local network: Add your domain and all device IPs that need access
+# Example: "https://salespider.local https://192.168.1.133 https://192.168.1.150"
+# For wildcard (less secure): Use "*" to allow all origins
+ALLOWED_ORIGINS="https://salespider.local https://192.168.1.133"
+
 # Data and Backup Paths
 DATA_PATH=./data
 BACKUP_PATH=./data/backups
@@ -31,11 +38,20 @@ APP_PORT=3000
 LOG_LEVEL=info
 
 # Security Configuration (REQUIRED - change these values!)
+# Generate a secure JWT secret with: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
 JWT_SECRET=your-super-secret-jwt-key-min-32-characters-long
 TOKEN_EXPIRY=12h
 COOKIE_SECURE=true
 NEXTAUTH_SECRET=your-nextauth-secret-key-min-32-characters-long
 NEXTAUTH_URL=https://salespider.local
+
+# Rate Limiting Configuration (OPTIONAL)
+# For self-hosted on trusted networks, you can disable rate limiting
+# Set RATE_LIMITING_ENABLED=false to disable
+RATE_LIMITING_ENABLED=true
+RATE_LIMIT_MAX_ATTEMPTS=5
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_BLOCK_MS=3600000
 
 # Super Admin Account (REQUIRED - change these values!)
 SUPER_ADMIN_EMAIL=admin@salespider.local
