--- a/env.example
+++ b/env.example
@@ -21,7 +21,7 @@ HTTPS_PORT=443
 # For local network: Add your domain and all device IPs that need access
 # Example: "https://salespider.local https://192.168.1.133 https://192.168.1.150"
 # For wildcard (less secure): Use "*" to allow all origins
-ALLOWED_ORIGINS="https://salespider.local https://192.168.1.133"
+ALLOWED_ORIGINS="https://${DOMAIN} https://${HOST_IP}"
 
 # Data and Backup Paths
 DATA_PATH=./data
