--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   # SaleSpider Application
   app:
@@ -29,8 +28,8 @@ services:
     networks:
       - salespider-net
     ports:
-      - "${HTTP_PORT:-80}:80"
-      - "${HTTPS_PORT:-443}:443"
+      - '${HTTP_PORT:-80}:80'
+      - '${HTTPS_PORT:-443}:443'
 
   # Database Backup with pgBackRest (only when backup is enabled)
   backup:
@@ -101,17 +100,9 @@ volumes:
   # Backup volumes
   backup-data:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${BACKUP_PATH:-./data/backups}/pgbackrest
 
   backup-logs:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${DATA_PATH:-./data}/logs/backup
 
   # pgBackRest configuration (shared across services)
   pgbackrest-config:
