--- a/env.example
+++ b/env.example
@@ -16,6 +16,9 @@ HOST_IP=auto
 HTTP_PORT=80
 HTTPS_PORT=443
 
+# Application URL
+NEXT_PUBLIC_APP_URL=https://${DOMAIN}
+
 # CORS Configuration (space-separated list of allowed origins)
 # List all origins (domains/IPs) that will access the application
 # For local network: Add your domain and all device IPs that need access
