docs: add VitePress documentation site with screenshots
- Set up VitePress documentation website
- Add comprehensive documentation for all features
- Integrate 8 UI screenshots throughout documentation
- Configure custom theme with larger hero image
- Add GitHub Actions workflow for automated deployment
- Replace ASCII art with actual screenshots where appropriate

--- a/env.example
+++ b/env.example
@@ -45,8 +45,7 @@ LOG_LEVEL=info
 JWT_SECRET=your-super-secret-jwt-key-min-32-characters-long
 TOKEN_EXPIRY=12h
 COOKIE_SECURE=true
-NEXTAUTH_SECRET=your-nextauth-secret-key-min-32-characters-long
-NEXTAUTH_URL=https://salespider.local
+APP_URL=https://salespider.local
 
 # Rate Limiting Configuration (OPTIONAL)
 # For self-hosted on trusted networks, you can disable rate limiting
