--- a/.docker/compose/app.yml
+++ b/.docker/compose/app.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    build: 
+    build:
       context: ../..
       dockerfile: .docker/Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME:-salespider}-app
@@ -9,52 +9,59 @@ services:
       - NODE_ENV=${NODE_ENV:-production}
       - PORT=${APP_PORT:-3000}
       - HOSTNAME=0.0.0.0
-      
+
       # Database Configuration
       - DATABASE_URL=${DATABASE_URL}
       - BACKUP_DATABASE_URL=${BACKUP_DATABASE_URL:-}
-      
+
       # Security
       - JWT_SECRET=${JWT_SECRET}
-      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET:-${JWT_SECRET}}
-      - NEXTAUTH_URL=${NEXTAUTH_URL:-https://${DOMAIN:-localhost}}
-      
+      - APP_URL=${APP_URL:-https://${DOMAIN:-localhost}}
+
       # Application Settings
       - SUPER_ADMIN_EMAIL=${SUPER_ADMIN_EMAIL:-admin@localhost}
       - SUPER_ADMIN_PASSWORD=${SUPER_ADMIN_PASSWORD}
       - LOG_LEVEL=${LOG_LEVEL:-info}
-      
+
       # Feature Flags
       - ENABLE_ANALYTICS=${ENABLE_ANALYTICS:-false}
       - ENABLE_REPORTS=${ENABLE_REPORTS:-true}
       - ENABLE_BARCODE_SCANNER=${ENABLE_BARCODE_SCANNER:-true}
       - OFFLINE_MODE=${OFFLINE_MODE:-true}
-      
+
       # Performance Settings
       - DATABASE_POOL_SIZE=${DATABASE_POOL_SIZE:-10}
       - DATABASE_TIMEOUT=${DATABASE_TIMEOUT:-30000}
       - CACHE_TTL=${CACHE_TTL:-3600}
-      
+
       # SSL Configuration
       - SSL_ENABLED=${SSL_ENABLED:-true}
       - FORCE_HTTPS=${FORCE_HTTPS:-true}
 
       # GEMINI API KEY
       - GEMINI_API_KEY=${GEMINI_API_KEY}
-    
+
     volumes:
       - app-uploads:/app/uploads
       - app-logs:/app/logs
-    
+
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:${APP_PORT:-3000}/api/health"]
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://127.0.0.1:${APP_PORT:-3000}/api/health',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 60s
-    
+
     restart: unless-stopped
-    
+
     deploy:
       resources:
         limits:
@@ -63,13 +70,13 @@ services:
         reservations:
           memory: ${APP_MEMORY_RESERVATION:-1G}
           cpus: '${APP_CPU_RESERVATION:-1.0}'
-    
+
     logging:
       driver: json-file
       options:
-        max-size: "10m"
-        max-file: "3"
-    
+        max-size: '10m'
+        max-file: '3'
+
     networks:
       - salespider-net
 
