--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^4.0.12",
     "@vitest/ui": "^4.0.10",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
