fix: improve code quality, auth flow, CORS, and backup permissions
- Fix accessibility issues (interactive elements, array keys)
- Reduce cognitive complexity by extracting components
- Fix auth: invalidate queries on login, clear cache on logout
- Improve CORS: match protocol+host, exclude auth endpoints, add APP_URL
- Fix backup permissions: run as postgres user, use su-exec
- Update shell scripts: use [[ instead of [, redirect errors to stderr
- Add hosts file setup docs for local network access
- Extract nested ternary and fix negated conditions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.javascript.file.suffixes=.js,.jsx
 sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 
 # Exclusions
-sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/lib/i18n.ts
+sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/lib/i18n.ts,**/*-skeleton.tsx
 
 # --- Exclude files from specific rules ---
 sonar.issue.ignore.multicriteria=e1,e2
