--- a/.docker/compose/backup.yml
+++ b/.docker/compose/backup.yml
@@ -2,6 +2,7 @@ services:
   backup:
     image: alpine:latest
     container_name: ${COMPOSE_PROJECT_NAME:-salespider}-backup
+    # Run as root initially to fix permissions, then switch to postgres user
 
     environment:
       PGBACKREST_REPO1_TYPE: ${PGBACKREST_REPO1_TYPE:-none}
