--- a/env.example
+++ b/env.example
@@ -16,15 +16,17 @@ HOST_IP=auto
 HTTP_PORT=80
 HTTPS_PORT=443
 
-# Application URL
-NEXT_PUBLIC_APP_URL=https://${DOMAIN}
+# Application URL (REQUIRED - use actual domain, not variables)
+NEXT_PUBLIC_APP_URL=https://salespider.local
+APP_URL=https://salespider.local
 
 # CORS Configuration (space-separated list of allowed origins)
+# IMPORTANT: Use actual values, NOT variables like ${DOMAIN}
 # List all origins (domains/IPs) that will access the application
 # For local network: Add your domain and all device IPs that need access
-# Example: "https://salespider.local https://192.168.1.133 https://192.168.1.150"
+# Example: "https://salespider.local https://192.168.1.133 https://192.168.1.150 http://localhost:3000"
 # For wildcard (less secure): Use "*" to allow all origins
-ALLOWED_ORIGINS="https://${DOMAIN} https://${HOST_IP}"
+ALLOWED_ORIGINS="https://salespider.local https://192.168.1.133 http://localhost:3000"
 
 # Data and Backup Paths
 DATA_PATH=./data
