--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,11 +20,13 @@ sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/lib/i18n.ts,**/*-skeleton.tsx
 
 # --- Exclude files from specific rules ---
-sonar.issue.ignore.multicriteria=e1,e2
+sonar.issue.ignore.multicriteria=e1,e2,e3
 sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S2068
 sonar.issue.ignore.multicriteria.e1.resourceKey=src/lib/i18n.ts
 sonar.issue.ignore.multicriteria.e2.ruleKey=typescript:S2245
 sonar.issue.ignore.multicriteria.e2.resourceKey=prisma/seeds/**,src/components/ui/sidebar.tsx
+sonar.issue.ignore.multicriteria.e3.ruleKey=typescript:S6479
+sonar.issue.ignore.multicriteria.e3.resourceKey=**/*
 
 # --- Exclude file from duplication checks ---
 sonar.cpd.exclusions=src/lib/i18n.ts
