docs: update doc to warn about need for production seeding

--- a/env.example
+++ b/env.example
@@ -80,7 +80,7 @@ LANGUAGE=en
 THEME=light
 MAINTENANCE_MODE=false
 SHOW_DELETED_PRODUCTS=false
-ENABLED_PAYMENT_METHODS=CASH,CARD,MOBILE_MONEY,BANK_TRANSFER
+ENABLED_PAYMENT_METHODS=CASH,CARD,BANK_TRANSFER,CRYPTO,OTHER
 
 # Client-side accessible settings (NEXT_PUBLIC_ prefix)
 NEXT_PUBLIC_APP_NAME=SaleSpider
@@ -98,7 +98,7 @@ NEXT_PUBLIC_LANGUAGE=en
 NEXT_PUBLIC_THEME=light
 NEXT_PUBLIC_MAINTENANCE_MODE=false
 NEXT_PUBLIC_SHOW_DELETED_PRODUCTS=false
-NEXT_PUBLIC_ENABLED_PAYMENT_METHODS=CASH,CARD,MOBILE_MONEY,BANK_TRANSFER
+NEXT_PUBLIC_ENABLED_PAYMENT_METHODS=CASH,CARD,BANK_TRANSFER,CRYPTO,OTHER
 
 # Feature Flags (OPTIONAL)
 ENABLE_ANALYTICS=false
