--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "analyze": "ANALYZE=true npm run build",
     "seed": "tsx --env-file .env prisma/seeds/index.ts",
     "seed:prod": "npx tsx prisma/seeds/seed-production.ts",
+    "docs:build": "cd docs && npm run docs:build",
     "prepare": "husky"
   },
   "dependencies": {
