--- a/env.example
+++ b/env.example
@@ -121,6 +121,7 @@ CACHE_TTL=3600
 
 # PostgreSQL Settings (REQUIRED for self-hosted database)
 # For hosted database (Neon, Supabase, etc.), only DATABASE_URL is required
+POSTGRES_HOST=postgres
 POSTGRES_DB=salespider
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=SecurePostgresPassword123!
