--- a/.docker/compose/backup.yml
+++ b/.docker/compose/backup.yml
@@ -44,17 +44,17 @@ services:
       - postgres-backups:/var/lib/postgresql/backups
       - postgres-data:/var/lib/postgresql/data
       - ../scripts/backup:/scripts:ro
-      - pgbackrest-config:/pgbackrest-config:ro
+      - ../config/pgbackrest:/pgbackrest-config:ro
 
-    command: ['sh', '/scripts/start-pgbackrest.sh']
+    command: ["sh", "/scripts/start-pgbackrest.sh"]
 
     healthcheck:
       test:
         [
-          'CMD',
-          'sh',
-          '-c',
-          'pgbackrest --stanza=${PGBACKREST_STANZA:-salespider} info',
+          "CMD",
+          "sh",
+          "-c",
+          "pgbackrest --stanza=${PGBACKREST_STANZA:-salespider} info",
         ]
       interval: 60s
       timeout: 30s
@@ -67,16 +67,16 @@ services:
       resources:
         limits:
           memory: ${BACKUP_MEMORY_LIMIT:-512M}
-          cpus: '${BACKUP_CPU_LIMIT:-0.5}'
+          cpus: "${BACKUP_CPU_LIMIT:-0.5}"
         reservations:
           memory: ${BACKUP_MEMORY_RESERVATION:-256M}
-          cpus: '${BACKUP_CPU_RESERVATION:-0.25}'
+          cpus: "${BACKUP_CPU_RESERVATION:-0.25}"
 
     logging:
       driver: json-file
       options:
-        max-size: '10m'
-        max-file: '3'
+        max-size: "10m"
+        max-file: "3"
 
     networks:
       - salespider-net
@@ -89,8 +89,6 @@ volumes:
   postgres-backups:
     external: true
   postgres-data:
-    external: true
-  pgbackrest-config:
     external: true
 
 networks:
