--- a/.docker/compose/postgres.yml
+++ b/.docker/compose/postgres.yml
@@ -60,7 +60,7 @@ services:
       - backup-logs:/var/log/pgbackrest
       - ../config/postgres/postgresql.conf:/etc/postgresql/postgresql.conf:ro
       - ../config/postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
-      - pgbackrest-config:/pgbackrest-config:ro
+      - ../config/pgbackrest:/pgbackrest-config:ro
       - ../scripts/postgres:/docker-entrypoint-initdb.d:ro
 
     command: >
@@ -83,8 +83,8 @@ services:
     healthcheck:
       test:
         [
-          'CMD-SHELL',
-          'pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-salespider}',
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-salespider}",
         ]
       interval: 10s
       timeout: 5s
@@ -97,16 +97,16 @@ services:
       resources:
         limits:
           memory: ${POSTGRES_MEMORY_LIMIT:-1G}
-          cpus: '${POSTGRES_CPU_LIMIT:-1.0}'
+          cpus: "${POSTGRES_CPU_LIMIT:-1.0}"
         reservations:
           memory: ${POSTGRES_MEMORY_RESERVATION:-512M}
-          cpus: '${POSTGRES_CPU_RESERVATION:-0.5}'
+          cpus: "${POSTGRES_CPU_RESERVATION:-0.5}"
 
     logging:
       driver: json-file
       options:
-        max-size: '10m'
-        max-file: '3'
+        max-size: "10m"
+        max-file: "3"
 
     networks:
       - salespider-net
@@ -119,8 +119,6 @@ volumes:
   backup-data:
     external: true
   backup-logs:
-    external: true
-  pgbackrest-config:
     external: true
 
 networks:
