--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     networks:
       - salespider-net
     ports:
-      - '${HTTP_PORT:-80}:80'
-      - '${HTTPS_PORT:-443}:443'
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
 
   # Database Backup with pgBackRest (only when backup is enabled)
   backup:
@@ -39,6 +39,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      setup:
+        condition: service_completed_successfully
     networks:
       - salespider-net
     profiles:
@@ -103,7 +105,3 @@ volumes:
 
   backup-logs:
     driver: local
-
-  # pgBackRest configuration (shared across services)
-  pgbackrest-config:
-    external: true
