fix: removed excess sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,7 @@ sonar.javascript.file.suffixes=.js,.jsx
 sonar.tests=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 
 # Exclusions from all analysis
+sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/test/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 sonar.exclusions=**/*.config.js,**/*.config.ts,**/node_modules/**,**/.next/**,**/dist/**,**/build/**,**/coverage/**,src/test/**
 
 # --- Exclude files from specific rules ---
