--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build --turbopack",
     "build:webpack": "next build",
-    "start": "next start",
-    "start:prod": "npx prisma migrate deploy && npx tsx prisma/seeds/seed-production.ts && next start",
+    "postbuild": "cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/ 2>/dev/null || true",
+    "start": "node .next/standalone/server.js",
+    "migrate": "npx prisma migrate deploy",
+    "start:prod": "npm run migrate && npm run seed:prod && npm start",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest",
