--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "next build --turbopack",
     "build:webpack": "next build",
     "postbuild": "cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/ 2>/dev/null || true",
-    "start": "node .next/standalone/server.js",
+    "start": "next start",
+    "start:standalone": "node .next/standalone/server.js",
     "migrate": "npx prisma migrate deploy",
     "start:prod": "npm run migrate && npm run seed:prod && npm start",
     "lint": "eslint .",
